generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum Role {
  OWNER
  ADMIN
  AGENT
  MEMBER
}

enum TicketStatus {
  OPEN
  IN_PROGRESS
  RESOLVED
  CLOSED
}

enum Priority {
  LOW
  MEDIUM
  HIGH
  URGENT
}

enum TicketSource {
  WEB
  EMAIL
  CHAT
  API
}

model User {
  id        String   @id @default(uuid())
  email     String   @unique
  password  String
  name      String?
  createdAt DateTime @default(now())

  memberships Membership[]

  createdTickets  Ticket[] @relation("CreatedTickets")
  assignedTickets Ticket[] @relation("AssignedTickets")

  comments       TicketComment[]
  attachments    TicketAttachment[]
  activities     TicketActivityLog[]
  agentWorkloads AgentWorkload[]
  notifications  Notification[]

  notificationPreference NotificationPreference?
}

model Organization {
  id        String   @id @default(uuid())
  name      String   @unique
  createdAt DateTime @default(now())

  memberships    Membership[]
  tickets        Ticket[]
  tags           Tag[]
  agentWorkloads AgentWorkload[]
  notifications  Notification[]
}

model Membership {
  id String @id @default(uuid())

  userId         String
  organizationId String

  role Role @default(MEMBER)

  isAvailable       Boolean @default(true)
  maxTicketsPerDay  Int?    @default(10)
  maxTicketsPerWeek Int?    @default(50)

  user         User         @relation(fields: [userId], references: [id])
  organization Organization @relation(fields: [organizationId], references: [id])

  createdAt DateTime @default(now())

  @@unique([userId, organizationId])
  @@index([organizationId, role, isAvailable, createdAt])
}

model Ticket {
  id          String  @id @default(uuid())
  title       String
  description String?

  status   TicketStatus @default(OPEN)
  priority Priority     @default(MEDIUM)
  source   TicketSource @default(WEB)

  organizationId String
  organization   Organization @relation(fields: [organizationId], references: [id])

  createdById String
  createdBy   User   @relation("CreatedTickets", fields: [createdById], references: [id])

  assignedToId String?
  assignedTo   User?   @relation("AssignedTickets", fields: [assignedToId], references: [id])

  // AI fields
  aiActive       Boolean @default(true)
  aiMessageCount Int     @default(0)

  comments      TicketComment[]
  attachments   TicketAttachment[]
  tags          TicketTag[]
  activities    TicketActivityLog[]
  notifications Notification[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([organizationId])
  @@index([assignedToId])
  @@index([status])
  @@index([organizationId, status])
  @@index([organizationId, assignedToId])
  @@index([createdAt])
}

model TicketComment {
  id String @id @default(uuid())

  ticketId String
  ticket   Ticket @relation(fields: [ticketId], references: [id])

  authorId String?
  author   User?   @relation(fields: [authorId], references: [id])

  authorType CommentAuthorType

  message String

  isInternal Boolean @default(false)

  createdAt DateTime @default(now())
}

enum CommentAuthorType {
  USER
  AI
  SYSTEM
}

model TicketAttachment {
  id String @id @default(uuid())

  ticketId String
  ticket   Ticket @relation(fields: [ticketId], references: [id])

  uploadedBy String
  uploader   User   @relation(fields: [uploadedBy], references: [id])

  fileUrl  String
  fileType String
  fileSize Int

  createdAt DateTime @default(now())
}

model Tag {
  id String @id @default(uuid())

  name           String
  organizationId String

  organization Organization @relation(fields: [organizationId], references: [id])
  tickets      TicketTag[]

  @@unique([organizationId, name])
}

model TicketTag {
  ticketId String
  tagId    String

  ticket Ticket @relation(fields: [ticketId], references: [id])
  tag    Tag    @relation(fields: [tagId], references: [id])

  @@id([ticketId, tagId])
}

model TicketActivityLog {
  id String @id @default(uuid())

  ticketId String
  ticket   Ticket @relation(fields: [ticketId], references: [id])

  actorId String
  actor   User   @relation(fields: [actorId], references: [id])

  action   TicketActivityAction
  oldValue String?
  newValue String?

  createdAt DateTime @default(now())

  @@index([ticketId, createdAt])
}

model AgentWorkload {
  id String @id @default(uuid())

  userId         String
  organizationId String

  assignedToday    Int @default(0)
  assignedThisWeek Int @default(0)

  lastDailyReset  DateTime
  lastWeeklyReset DateTime

  user         User         @relation(fields: [userId], references: [id])
  organization Organization @relation(fields: [organizationId], references: [id])

  @@unique([userId, organizationId])
  @@index([organizationId])
  @@index([organizationId, assignedToday, assignedThisWeek, userId])
}

model Notification {
  id String @id @default(uuid())

  organizationId String
  organization   Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)

  ticketId String?
  ticket   Ticket? @relation(fields: [ticketId], references: [id], onDelete: Cascade)

  recipientId String
  recipient   User   @relation(fields: [recipientId], references: [id], onDelete: Cascade)

  type NotificationType

  title    String
  message  String
  metadata Json?

  isRead Boolean   @default(false)
  readAt DateTime?

  createdAt DateTime @default(now())

  @@index([recipientId, isRead, createdAt])
  @@index([organizationId, createdAt])
  @@index([ticketId, createdAt])
}

model NotificationPreference {
  id String @id @default(uuid())

  userId String @unique
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  inAppEnabled              Boolean            @default(true)
  emailEnabled              Boolean            @default(false)
  pushEnabled               Boolean            @default(false)
  websocketEnabled          Boolean            @default(true)
  suppressSelfNotifications Boolean            @default(true)
  disabledTypes             NotificationType[] @default([])

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

enum TicketActivityAction {
  TICKET_CREATED
  TICKET_UPDATED
  TICKET_ASSIGNED
  TICKET_STATUS_UPDATED
  COMMENT_ADDED
  COMMENT_DELETED
  ATTACHMENT_ADDED
  ATTACHMENT_DELETED
  TAG_ADDED
  TAG_REMOVED
}

enum NotificationType {
  TICKET_ASSIGNED
  TICKET_COMMENT_ADDED
  TICKET_COMMENT_DELETED
  TICKET_TAG_ADDED
  TICKET_TAG_REMOVED
  TICKET_ATTACHMENT_ADDED
  TICKET_ATTACHMENT_DELETED
}
